--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,13 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     ports:
-      - "5432:5432"
+      - "5432:5432"   # si 5432 está ocupado, usa "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U pap -d papdb"]
+      test: ["CMD-SHELL", "pg_isready -U admin -d biblioteca_bd"]
       interval: 10s
       timeout: 5s
       retries: 5
-
 volumes:
   pgdata:
