Funcionalidad cambiar estado de lectores - Agregar método cambiarEstadoLector en IControlador - Implementar lógica en Controlador y ManejadorLector - Crear ventana CambiarEstadoLector funcional - Mejorar interfaz de usuario (ocultar IDs técnicos) - Corregir configuración de base de datos PostgreSQL

--- a/src/main/resources/database-postgresql.properties
+++ b/src/main/resources/database-postgresql.properties
@@ -3,9 +3,9 @@
 
 # Configuración de conexión PostgreSQL
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5434/database-name
-db.username=el-username
-db.password=la-password
+db.url=jdbc:postgresql://localhost:5432/biblioteca_bd
+db.username=admin
+db.password=admin
 
 # Configuración de Hibernate para PostgreSQL
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
