--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres:15
     container_name: postgres-local
     environment:
       POSTGRES_DB: biblioteca_bd
