--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <junit.version>4.13.2</junit.version>
     <log4j.version>1.2.17</log4j.version>
     <postgresql.version>42.7.2</postgresql.version>
-    <hibernate.version>5.6.15.Final</hibernate.version>
+    <hibernate.version>6.4.2.Final</hibernate.version>
   </properties>
   <dependencies>
     <dependency>
@@ -37,9 +37,23 @@
     </dependency>
     <!-- Hibernate Core -->
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
+    </dependency>
+    
+    <!-- Jakarta Persistence API -->
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+    
+    <!-- Hibernate Validator para Jakarta -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.1.Final</version>
     </dependency>
     
     <!-- JAX-WS Dependencies for Java 21 -->
